Name:               BlazeHtml
Version:            1.4

Synopsis:           A simple, fast and efficient HTML combinator library.
Description:        A simple, fast and efficient HTML combinator library using
                    Data.Text.
Author:             Jasper Van der Jeugt
Maintainer:         jaspervdj@gmail.com
Homepage:           http://github.com/jaspervdj/BlazeHtml
Bug-Reports:        http://github.com/jaspervdj/BlazeHtml/issues
License:            BSD3
License-File:       LICENSE
Category:           Text
Cabal-Version:      >= 1.6
build-type:         Simple

source-repository head
  type:             git
  location:         git://github.com/jaspervdj/BlazeHtml.git

library
  ghc-options:      -Wall
  hs-source-dirs:   src
  build-depends:    base >= 4 && < 5,
                    text >= 0.7,
                    containers >= 0.1,
                    mtl >= 1.1
  exposed-modules:  Text.BlazeHtml.Html
                    Text.BlazeHtml.Render.HtmlIO
  other-modules:    Text.BlazeHtml.Internal.Html

executable criterion
  ghc-options:      -Wall
  hs-source-dirs:   src benchmarks
  build-depends:    base >= 4 && < 5, criterion
  main-is:          Criterion.hs
  extensions:       OverloadedStrings