Name:               BlazeHtml
Version:            0.1

Synopsis:           A simple, fast and efficient HTML combinator library.
Description:        A simple, fast and efficient HTML combinator library using
                    Data.Text.
Author:             Jasper Van der Jeugt
Maintainer:         jaspervdj@gmail.com
Homepage:           http://github.com/jaspervdj/BlazeHtml
Bug-Reports:        http://github.com/jaspervdj/BlazeHtml/issues
License:            BSD3
License-File:       LICENSE
Category:           Text
Cabal-Version:      >= 1.6
build-type:         Simple

source-repository head
  type:             git
  location:         git://github.com/jaspervdj/BlazeHtml.git

flag text
  description: use Data.Text as underlying implementation for string data
  default:     True
  
flag string
  description: use String as underlying implementation for string data
  default:     False
         
library
  ghc-options:      -Wall
  hs-source-dirs:   src
  build-depends:    base >= 4 && < 5,
                    text >= 0.7,
                    containers >= 0.1,
                    mtl >= 1.1
  exposed-modules:  Text.BlazeHtml.Html
                    Text.BlazeHtml.Text
                    Text.BlazeHtml.Render.HtmlIO
                    Text.BlazeHtml.Render.HtmlText
                    Text.BlazeHtml.Render.HtmlPrettyText
  other-modules:    Text.BlazeHtml.Internal.Html
                    Text.BlazeHtml.Internal.Escaping
  if flag(text) 
    hs-source-dirs: impl/text
  if flag(string)
    hs-source-dirs: impl/string
  
executable benchmark
  ghc-options:      -Wall
  hs-source-dirs:   src benchmarks
  build-depends:    base >= 4 && < 5, criterion, network
  main-is:          Criterion.hs
  extensions:       OverloadedStrings
  if flag(text) 
    hs-source-dirs: impl/text
  if flag(string)
    hs-source-dirs: impl/string
