Name:               BlazeHtmlContentTest
Version:            0.1
Synopsis:           Content test for the BlazeHtml library.
Description:        Benchmarking for the BlazeHtml library.
Author:             Jim Whitehead
Maintainer:         jnwhiteh@gmail.com
Homepage:           http://github.com/jaspervdj/BlazeHtml
Bug-Reports:        http://github.com/jaspervdj/BlazeHtml/issues
License:            BSD3
License-File:       LICENSE
Category:           Text
Cabal-Version:      >= 1.6
build-type:         Simple

flag text
  description: use Data.Text as underlying implementation for string data
  default:     True
  
flag string
  description: use String as underlying implementation for string data
  default:     False

executable blazehtml_contenttest
  ghc-options:      -Wall -O2
  hs-source-dirs:   . ../../src ../../impl/text
  build-depends:    base >= 4 && < 5, criterion, containers, network, directory, text, mtl,
                    binary, bytestring, html
  main-is:          Content.hs
  extensions:       OverloadedStrings
  if flag(text) 
    hs-source-dirs: ../../impl/text
  if flag(string)
    hs-source-dirs: ../../impl/string

